sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:10: error: not found: value i
    for(j<-0 to (length-2-i))
                          ^AlgBubbleSort3:18: error: not found: value i
    i+=1;
    ^