sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
  var length : Int = getValueCount();
  var tri : Boolean = true;
  
  while(tri)
	{
    
  	tri = false;
    for(j<-0 to (length-2-i))
    {
      if(isSmaller(j+1,j))
      {
        swap(j,j+1);
        tri=true;        
      }
    }
    i+=1;
  }
    
}